force-app/main/default/objects/ContactCostInfo__c/ContactCostInfo__c.object-meta.xml
<CustomObject>
    <label>Contact Cost Info</label>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Contact Cost Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Cost Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>