force-app/main/default/objects/ContactCostInfo__c/fields/ATM_Fee__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee__c</fullName>
    <label>ATM Fee</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>