force-app/main/default/objects/ContactCostInfo__c/fields/Cost_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Month__c</fullName>
    <label>Cost Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>